--- a/devcircle/templates/home/login_modal.html
+++ b/devcircle/templates/home/login_modal.html
@@ -12,13 +12,13 @@
         <form id= "login_form" action= "/login/" method= "post">
           <div class= "mb-2">
             <label class= "form-label">Username</label>
-            <input type= "text" name= "username" id= "username" class= "form-control">
+            <input type= "text" name= "username" class= "form-control">
           </div>
 
           <div class= "mb-2">
             <label class= "form-label">Password</label>
             <div style= "position:relative">
-              <input type= "password" id= "password" name= "password" class= "form-control password">
+              <input type= "password" name= "password" class= "form-control password">
               <button type="button" class= "btn btn-sm show_password" style= "position:absolute; right:0%; top:5%"><i class= "fa-solid fa-eye eye_icon"></i></button>
             </div>
           </div>
