--- a/devcircle/templates/landing/base.html
+++ b/devcircle/templates/landing/base.html
@@ -3,22 +3,53 @@
 <head>
 <meta charset= "UTF-8">
 <meta name= "viewport" content= "width=device-width, initial-scale=1, shrink-to-fit=no">
-<title>{% block title %}{% endblock title %}</title>
+<title></title>
 <link rel= "stylesheet" href= "{{url_for('static', filename='libraries/bootstrap/css/bootstrap.css')}}">
 <link rel= "stylesheet" href= "{{url_for('static', filename='libraries/fontawesome/css/all.css')}}">
 <link rel= "stylesheet" href= "{{url_for('static', filename='custom_files/stylesheet.css')}}">
+<style>
+	body{background-color: #eee;}
+</style>
 {% block internal_styles %}
 {% endblock internal_styles %}
 </head>
 
 <body>
-{% block body %}
-{% endblock body %}
+<div class= "container">
+	<div class= "row align-items-end whitebg">
+		<div class= "col-4">
+			<img src= "/static/images/dev_circle.png" alt= "devcircle logo" class= "logo">
+		</div>
 
+		<div class= "col">
+			<ul class= "nav">
+				<li class= "nav-link"><a href= "{{url_for('dev_landing')}}" class= "btn btn-outline-success">Home</a></li>
+				<li class= "nav-link"><a href= "#" class= "btn btn-outline-success">Groups</a></li>
+				<li class= "nav-link"><a href= "#" class= "btn btn-outline-success">Projects</a></li>
+				<li class= "nav-link"><a href= "#" class= "btn btn-outline-success">Notifications</a></li>
+				<li class= "nav-link"><a href= "#" class= "btn btn-outline-success">Messages</a></li>
+				<li class= "nav-link"><a href= "#" class= "btn btn-outline-success">Me</a></li>
+			</ul>
+		</div>
+	</div>
+
+	<div class= "row mt-2">
+		<div class= "col">
+			{% block body %}
+			{% endblock body %}
+		</div>
+	</div>
+</div>
+
+
+	
+
+
+
+<script src= "{{url_for('static', filename='libraries/jquery.js')}}" type= "text/javascript"></script>
 <script src= "{{url_for('static', filename='libraries/bootstrap/js/bootstrap.bundle.js')}}"></script>
-<script src= "{{url_for('static', filename='libraries/jquery.js')}}"></script>
 <script src= "/static/custom_files/custom_javascript.js"></script>
-{% block internal_script %}
-{% endblock internal_script %}
+{% block internal_scripts %}
+{% endblock internal_scripts %}
 </body>
 </html>
