--- a/devcircle/templates/landing/create_group_modal.html
+++ b/devcircle/templates/landing/create_group_modal.html
@@ -38,7 +38,7 @@
               <div class= "mb-2">
                 <label class= "form-label">Rules</label>
                 <div id= "create_group_rule_container"></div>
-                <button type= "button" class= "btn btn-outline-primary" onclick= "add_rule()">Add Rule</button>
+                <button type= "button" class= "btn btn-outline-primary btn-sm" onclick= "add_rule()">Add Rule</button>
                 <button type= "button" class= "btn btn-outline-danger" onclick= "remove_rule()" hidden id= "remove_rule_btn">Remove Rule</button>
               </div>
               <div>
