--- a/devcircle/templates/landing/messages.html
+++ b/devcircle/templates/landing/messages.html
@@ -2,9 +2,9 @@
 
 {% block body %}
 <div class= "row">
-	<div class= "col-4 me-2" id= "messages_all_grp_members">
-		<div class= "row whitebg mb-2">
-			<div class= "col text-center">
+	<div class= "col-4 me-3" id= "messages_all_grp_members">
+		<div class= "row whitebg">
+			<div class= "col text-center bg-success text-light">
 				<h4>All Group Members</h4>
 			</div>
 		</div>
@@ -25,8 +25,8 @@
 
 
 	<div class= "col">
-		<div class= "row whitebg mb-2">
-			<div class= 'col text-center'>
+		<div class= "row whitebg mb-1">
+			<div class= 'col text-center bg-success text-light'>
 				<h4>Your Conversations</h4>
 			</div>
 		</div>
