--- a/devcircle/templates/home/base.html
+++ b/devcircle/templates/home/base.html
@@ -17,8 +17,16 @@
 
 <script src= "{{url_for('static', filename='libraries/jquery.js')}}" type= "text/javascript"></script>
 <script src= "{{url_for('static', filename='libraries/bootstrap/js/bootstrap.bundle.js')}}"></script>
-
 <script src= "/static/custom_files/custom_javascript.js" type= "text/javascript"></script>
+<script type= "text/javascript">
+/* This is to reativate signup modal if validation fails on serverside */
+var plink= '{{ request.path }}';
+
+$(document).ready(function(){
+	if (plink == '/signup/'){
+		$('#signup_modal').modal('show');}
+});
+</script>
 {% block internal_script %}
 {% endblock internal_script %}
 </body>
