--- a/devcircle/templates/landing/error404.html
+++ b/devcircle/templates/landing/error404.html
@@ -1,10 +1,15 @@
-{%extends 'landing/base.html'%}
+{% if session.get('dev_id') != None %}
+{% extends 'landing/base.html'%}
+{% else %}
+{% extends 'home/base.html'%}
+{% endif %}
 
 {% block body %}
 <div class= "row whitebg">
 	<div class= "col text-center">
 		<h3>Page Not Found</h3>
-		<p>This page does not exist. Please visit our other pages that do exist. You can use the links above for navigation.</p>
+		<p>This page does not exist. Please visit our other pages that do exist. You can use the links above or home below for navigation.</p>
+		<a href= "/" class= "btn home-navig-link">Home</a>
 	</div>
 </div>
 {% endblock body %}
