--- a/devcircle/templates/landing/projects.html
+++ b/devcircle/templates/landing/projects.html
@@ -12,8 +12,8 @@
 
 <div class= "row proj_div" id= "proj_ass_to_you">
 	<div class= "col">
-		<div class= "row whitebg mb-1">
-			<div class= "col text-center">
+		<div class= "row whitebg">
+			<div class= "col text-center bg-success text-light">
 				<h4>Projects Assigned to You</h4>
 			</div>
 		</div>
@@ -24,7 +24,10 @@
 		<div class= "row whitebg mb-2 py-2">
 			<div class= "col" id= "assigned_project{{i.task_id}}">
 				<h5>Title: {{i.task_title}}</h5>
-				<p><b>Assigned By: </b>{{i.assigner.developer.username}}</p>
+				<p>
+					<b>Assigned By: </b>{{i.assigner.developer.username}}
+					<button class= "btn" data-bs-toggle="tooltip" data-bs-title="Send Message" onclick= "send_message_modal('{{i.assigner.developer.username}}', {{i.assigner.dev_id}})"><i class="fa-solid fa-envelope"></i></button>
+				</p>
 				<p><b>Group: </b>{{i.assigner.group.grp_name}}</p>
 				<p><b>Duration: </b>{{i.duration}} days</p>
 				<p><b>Status: </b>{{i.status.name}}</p>
@@ -59,8 +62,8 @@
 
 <div class= "row proj_div" id= "closed_proj" hidden>
 	<div class= "col">
-		<div class= "row whitebg mb-2">
-			<div class= "col text-center">
+		<div class= "row whitebg">
+			<div class= "col text-center bg-success text-light">
 				<h4>Closed Projects</h4>
 			</div>
 		</div>
@@ -99,8 +102,8 @@
 
 <div class= "row proj_div" id= "proj_you_ass" hidden>
 	<div class= "col">
-		<div class= "row whitebg mb-2">
-			<div class= "col text-center">
+		<div class= "row whitebg">
+			<div class= "col text-center bg-success text-light">
 				<h4>Projects You Assigned</h4>
 			</div>
 		</div>
@@ -126,6 +129,9 @@
 				{% endif %}
 				<p><b>Description and Requirements</b></p>
 				<p>{{i.task_desc}}</p>
+				{% if i.status.name in ['accepted', 'contended', 'pending'] %}
+				<button id= "cancelbtn{{i.task_id}}" class= "btn btn-danger" onclick= "cancel_project({{i.task_id}}, '{{csrf_token()}}', 'cancelbtn{{i.task_id}}')">Cancel Assignment</button>
+				{% endif %}
 			</div>
 		</div>
 		{% endfor %}
@@ -141,4 +147,5 @@
 
 
 {% include 'landing/submit_project_modal.html' %}
+{% include 'landing/send_messages_modal.html' %}
 {% endblock body %}
