--- a/devcircle/templates/landing/projects.html
+++ b/devcircle/templates/landing/projects.html
@@ -3,9 +3,9 @@
 {% block body %}
 <div class= "row whitebg mb-2">
 	<div class= "col text-center">
-		<button class= "btn btn-outline-primary" onclick= "show_proj_div('proj_ass_to_you')">Projects Assigned to You</button>
-		<button class= "btn btn-outline-primary" onclick= "show_proj_div('closed_proj')">Closed Projects</button>
-		<button class= "btn btn-outline-primary" onclick= "show_proj_div('proj_you_ass')">Projects You Assigned</button>
+		<button class= "btn btn-outline-primary m-1" onclick= "show_proj_div('proj_ass_to_you')">Projects Assigned to You</button>
+		<button class= "btn btn-outline-primary m-1" onclick= "show_proj_div('closed_proj')">Closed Projects</button>
+		<button class= "btn btn-outline-primary m-1" onclick= "show_proj_div('proj_you_ass')">Projects You Assigned</button>
 	</div>
 </div>
 
