--- a/devcircle/static/custom_files/stylesheet.css
+++ b/devcircle/static/custom_files/stylesheet.css
@@ -50,3 +50,14 @@
 
 /* The 'me' page */
 .yellowish_area{ background-color: rgba(224, 225, 102, 1.0); }
+
+
+
+/* Media queries */
+@media screen and (max-width:426px) {
+	#home_welcome_heading{ font-size: 2.5em; }
+	.home_banner_text{ font-size: 1.2em; }
+	.home_normal_text{ font-size: 1.5em; }
+	#home_banner{ height:70vh; } 
+	#banner_overlay{ background-color: rgba(0,0,0,0.6); height: 70vh; }
+}
