--- a/devcircle/templates/home/footer.html
+++ b/devcircle/templates/home/footer.html
@@ -1,16 +1,16 @@
 <div class= "row align-items-center justify-content-center" id= "footer_area">
-		<div class= "col-10">
+		<div class= "col-12 col-md-10">
 			<div class= "row">
-				<div class= "col text-center">
+				<div class= "col gy-2 text-center">
 					<a href= "/" class= "btn btn-outline-light">Home</a>
 				</div>
-				<div class= "col text-center">
+				<div class= "col gy-2 text-center">
 					<button class= "btn btn-outline-light" data-bs-toggle= "modal" data-bs-target= "#login_modal">Login</button>
 				</div>
-				<div class= "col text-center">
+				<div class= "col gy-2 text-center">
 					<button class= "btn btn-outline-light" data-bs-toggle= "modal" data-bs-target= "#signup_modal">Sign Up</button>
 				</div>
-				<div class= "col text-center">
+				<div class= "col gy-2 text-center">
 					<button class= "btn btn-outline-light" data-bs-toggle= "modal" data-bs-target= "#contact_modal">Contact Us</button>
 				</div>
 			</div>
