--- a/devcircle/templates/landing/dev_page.html
+++ b/devcircle/templates/landing/dev_page.html
@@ -62,6 +62,12 @@
 </div>
 
 <div class= "row"><div class= "col post_container">
+<div class= "row">
+	<div class= "col bg-success text-light mb-2 text-center">
+		<p><b>Group Posts</b></p>
+	</div>
+</div>
+
 {% if posts != [] %}
 {% for p in posts %}
 <div class= "row whitebg mb-2 select_group">
