--- a/devcircle/templates/home/index.html
+++ b/devcircle/templates/home/index.html
@@ -43,7 +43,7 @@ btn-success{ background-color: rgb(71, 188, 69); }
 							<p class= "text-center home_banner_text"><span style= "color: rgb(71, 188, 69);">DEV-CIRCLE</span> connects you to new and experienced software developers all over the world.</p>
 							<p class= "text-center home_banner_text">Share posts, messages, problems and even tasks with fellow developers about the languages that makes you the most excited.</p>
 							<p class= "text-center home_banner_text">Join Us Today!</p>
-							<p class= "text-center">
+							<p class= "text-center d-block d-sm-none">
 								<button class= "btn btn-success btn-lg rounded-pill" data-bs-toggle= "modal" data-bs-target= "#login_modal">Login</button>
 								<button class= "btn btn-success btn-lg rounded-pill" data-bs-toggle= "modal" data-bs-target= "#signup_modal">SignUp</button>
 
